network-policy/admin-api-restrict.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: admin-api-restrict
  namespace: kong
spec:
  podSelector:
    matchLabels:
      app: kong-kong
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 172.24.0.100/24
      ports:
        - protocol: TCP
          port: 30001
